# blockchain-rust

./: .env  Cargo.toml  新建 文本文档.txt
core/: Cargo.toml
core/src/: block.rs  blockchain.rs  config.rs  lib.rs  memory_pool.rs  node.rs  pow.rs  proof_of_work.rs  server.rs  transaction.rs  utxo.rs  wallet.rs  wallets.rs
dataBase/: db  snap.0000000000000B65  snap.0000000000001272
main/: Cargo.toml
main/src/: main.rs
src/: cli.yml  main.rs
src/cli/: entry.rs  mod.rs  opt.rs  run.rs  subcommand.rs
utils/: Cargo.toml
utils/src/: coder.rs  lib.rs
