[package]
author = "Linken"
edition = "2021"
name = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.34.0", features = ["yaml"]}
core = {path = "core"}
data-encoding = "2.3.2"
utils = {path = "utils"}

[workspace]
members = ["core", "utils"]
