[package]
author = "Linken"
edition = "2021"
name = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9"
clap = {version = "3.1.18", features = ["derive"]}
core = {path = "core"}
data-encoding = "2.3.2"
utils = {path = "utils"}

[workspace]
members = ["core", "utils"]
