[package]
edition = "2021"
name = "core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.18"
data-encoding = "2.3.2"
num-bigint = "0.4.3"
serde = {version = "1.0.136", features = ["derive"]}
utils = {path = "../utils"}
