[package]
edition = "2021"
name = "core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.18"
data-encoding = "2.3.2"
dotenv = "0.15.0"
log = "0.4.15"
num-bigint = "0.4.3"
once_cell = "1.10.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
sled = "0.34.7"
utils = {path = "../utils"}
